feat: use config file

--- a/back/todo
+++ b/back/todo
@@ -2,3 +2,4 @@
     // https://www.restapitutorial.com/lessons/httpmethods.html
     ☐ Setup Aggregate
     ☐ Setup memserver for testing
+    ☐ Setup authentication
